# agent-memory-hub

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  README.pt-br.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
docs/: 00-design-decisions.md  01-architecture.md
docs/demo/: profile-loop-demo.sh  profile-loop.tape
hooks/: capture_session.py  recall_session.py
scripts/: apply_profile_rules.py  backfill_sessions.py  backfill_summaries.py  backup.py  backup.sh  consolidate_facts.py  embed_pending.py  eval_recall.py  extract_facts.py  install_hooks.py  mcp_server.py  mem_cli.py  memory.py  memory_client.py  migrate.py  pull-backups.sh  search.py  setup.sh  synthesize_profile.py  weekly_digest.py
scripts/adapters/: codex.py  cursor.py
sql/: 01-schema.sql  02-phase2-pgvector.sql  03-hybrid-search.sql  04-summary.sql  05-facts.sql  06-find-fact-dupes.sql  07-profile.sql
supabase/functions/embed/: index.ts
tests/: README.md  conftest.py  test_capture_session.py  test_cursor_adapter.py  test_eval_recall.py
tests/eval/: recall_gold.example.json
